frontend/test/should_fail/index_count_missing_where_index_expected.grg
rule i(ref s:set<Node>) {
	if{ countNodesFromIndex(s) > 0; }
	
	modify {
	}
}
